--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,4 @@
 ---
-# These are OK:
-
 StringLiterals:
   EnforcedStyle: single_quotes
   Enabled: true
@@ -21,7 +19,7 @@ Documentation:
 
 Output:
   Description: 'Checks for calls to puts, print, etc.'
-  Enabled: false
+  Enabled: true
 
 ExtraSpacing:
   Enabled: false
